...
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <ImageButton
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:adjustViewBounds="true"
                android:background="@color/cardview_dark_background"
                android:contentDescription="@string/play"
                android:padding="20dp"
                app:srcCompat="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/scoreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:adjustViewBounds="true"
                android:background="@color/cardview_dark_background"
                android:contentDescription="@string/score"
...
