...
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pseudo"
            android:textAlignment="center"
            android:textColor="@color/cardview_dark_background"
            android:textSize="25sp"
            android:labelFor="@+id/pseudo_input"
            />
        <EditText
            android:id="@+id/pseudo_input"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="@color/black"
...
            android:inputType="textShortMessage"
            android:hint="@string/pseudo_enter"
            android:textColorHint="@color/black"
            />

        <ImageButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="@string/play"
...
